@@ -1,3 +1,11 @@
+2022-08-20  Vino Fernando Crescini  <vfcrescini@gmail.com>
+
+	* lib/webserver.py:
+
+	  - Replaced select() with poll() for some Micropython ports that
+	    don't have it.
+
+
 2022-08-16  Vino Fernando Crescini  <vfcrescini@gmail.com>
 
 	* lib/webserver.py:
